# panda_arm

./: .gitignore
src/robotic_arm/: CMakeLists.txt  package.xml
src/robotic_arm/config/: joint_limits.yaml
src/robotic_arm/launch/: demo.launch.py  panda_gazebo.launch.py
src/robotic_arm/models/: robot.urdf.xacro
src/robotic_arm/models/camera/: camera.urdf.xacro
src/robotic_arm/models/objects/: box.urdf.xacro
src/robotic_arm/models/panda/: gripper_moveit_controllers.yaml  hand.xacro  initial_positions.yaml  moveit_controllers.yaml  ompl_planning.yaml  panda.srdf  panda.urdf.xacro  panda_arm.srdf.xacro  panda_arm.xacro  panda_arm_hand.srdf.xacro  pilz_cartesian_limits.yaml
src/robotic_arm/src/: arm_control_node.cpp
src/robotic_arm/worlds/: pick_and_place.world  robotic_arm.world
